# Statistics

./: justfile  pyproject.toml
ISLP/hw2/: college.ipynb
ISLP/hw2/.ipynb_checkpoints/: college-checkpoint.ipynb
distributions/: common.ipynb
problems/: mvo.ipynb
scenarios/: regression_single_feat.ipynb
scenarios/decisiontree_hw/: data.csv  hw.ipynb  res.csv
src/statistics/: __init__.py
