[project]
name = "statistics"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Clouder0", email = "clouder0@outlook.com" }
]
requires-python = ">=3.12.0, < 3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "lets-plot>=4.4.1",
    "lux-api>=0.5.1",
    "matplotlib>=3.9.2",
    "palmerpenguins>=0.1.4",
    "polars>=1.9.0",
    "pyarrow>=17.0.0",
    "pygwalker>=0.4.9.10",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "ydata-profiling>=4.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
]
